--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME="Studiranje"
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:MPcuXyFBY5AY1HUaQ5uAEYH/iyt2+4L0mGNGBfZOMjo=
 APP_DEBUG=true
 APP_URL=http://localhost
