--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,5 +50,5 @@ jobs:
 
       # 7️⃣ (Opcionalno) PHPUnit testovi
       # Ako NEMAŠ testove – slobodno ostavi zakomentirano
-      # - name: Run tests
-      #   run: php artisan test
+      - name: Run tests
+        run: php artisan test
